# codebase_context

./: .gitignore  pyproject.toml
codebase_context/: generate_codebase.py
src/codebase_context/: __main__.py  generate_codebase.py
tests/: test_codebas_gen.py
