[tool.poetry]
name = "codebase_context"
version = "0.1.2"
description = ""
authors = ["Julian Kimmig <julian.kimmig@gmx.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
wrapconfig = {extras = ["all"], version = "^0.2.2"}


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
codebase_context = 'codebase_context.__main__:main'
